--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,163 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+body {
+	width: 100%;
+	height: 100%;
+}
+
+/* <uniquifier>: Use a unique and descriptive class name
+<weight>: Use a value from 300 to 800 */
+
+/* Font Styles */
+
+.open-sans-normal {
+	font-family: 'Open Sans', sans-serif;
+	font-optical-sizing: auto;
+	font-style: normal;
+	font-variation-settings: 'wdth' 100;
+}
+
+/* Text Styles */
+.text-primary {
+	color: #fd6e0a;
+}
+
+.text-white-2 {
+	color: #474747;
+}
+
+.text-white-3 {
+	color: #757575;
+}
+
+.bg-secondary {
+	background-color: #fff8f3;
+}
+
+.btn-primary {
+	background-color: #fd6e0a;
+	font-size: 20px;
+	font-weight: 700;
+	border: none;
+	border-radius: 5px;
+	color: #fff;
+}
+
+section {
+	margin: 100px 0;
+}
+
+.section-title {
+	font-size: 35px;
+	margin-bottom: 30px;
+}
+
+.section-description {
+	font-size: 20px;
+	margin-bottom: 30px;
+}
+
+/* Header Styles */
+header {
+	background-image: url('/assets/images/developer.png'),
+		url('/assets/images/header_bg.png');
+	background-repeat: no-repeat;
+	background-position: top left, bottom right;
+	height: 837px;
+}
+/* Nav Styles */
+
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0 150px;
+}
+
+.nav-title {
+	font-size: 45px;
+	font-weight: 800;
+}
+
+nav ul {
+	display: flex;
+	align-items: center;
+}
+
+nav ul li {
+	list-style: none;
+	margin-right: 20px;
+}
+
+nav ul li a {
+	text-decoration: none;
+	font-size: 20px;
+}
+
+nav ul li a button {
+	padding: 18px 35px;
+}
+
+/* Banner Styles */
+
+.banner {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0 150px;
+}
+
+.banner-content {
+	max-width: 585px;
+}
+
+.banner-greetings {
+	font-size: 45px;
+	font-weight: 600;
+}
+
+.banner-title {
+	font-size: 85px;
+	font-weight: 800;
+}
+
+.banner-img {
+	max-width: 584px;
+	max-height: 676px;
+}
+
+.banner-img img {
+	max-width: 584px;
+	max-height: 676px;
+}
+
+.banner button {
+	padding: 18px;
+}
+
+main {
+	max-width: 1140px;
+	margin: 0 auto;
+}
+
+/* About Styles */
+#about {
+	padding: 131px 156px;
+	border-radius: 10px;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.about-item-list {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+
+#about .item-label {
+	font-size: 20px;
+}
