--- a/styles/style.css
+++ b/styles/style.css
@@ -40,11 +40,13 @@ body {
 
 .btn-primary {
 	background-color: #fd6e0a;
+	padding: 15px 30px;
 	font-size: 20px;
 	font-weight: 700;
 	border: none;
 	border-radius: 5px;
 	color: #fff;
+	cursor: pointer;
 }
 
 section {
@@ -53,12 +55,10 @@ section {
 
 .section-title {
 	font-size: 35px;
-	margin-bottom: 30px;
 }
 
 .section-description {
 	font-size: 20px;
-	margin-bottom: 30px;
 }
 
 /* Header Styles */
@@ -67,7 +67,6 @@ header {
 		url('/assets/images/header_bg.png');
 	background-repeat: no-repeat;
 	background-position: top left, bottom right;
-	height: 837px;
 }
 /* Nav Styles */
 
@@ -75,7 +74,7 @@ nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin: 0 150px;
+	padding: 20px 150px;
 }
 
 .nav-title {
@@ -108,6 +107,7 @@ nav ul li a button {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	height: 100%;
 	margin: 0 150px;
 }
 
@@ -124,15 +124,19 @@ nav ul li a button {
 	font-size: 85px;
 	font-weight: 800;
 }
+.banner-description {
+	font-size: 18px;
+	margin-bottom: 30px;
+}
 
 .banner-img {
 	max-width: 584px;
-	max-height: 676px;
+	max-height: 100%;
 }
 
 .banner-img img {
-	max-width: 584px;
-	max-height: 676px;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 .banner button {
@@ -152,6 +156,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	gap: 30px;
 }
 
 .about-item-list {
@@ -162,4 +167,138 @@ main {
 
 #about .item-label {
 	font-size: 20px;
+	margin-bottom: 10px;
+}
+
+#about .item-value {
+	font-size: 20px;
+	font-weight: 700;
+}
+
+/* Skill Styles */
+#skills {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 30px;
+}
+.skill-list {
+	display: flex;
+	gap: 20px;
+}
+
+.skill-item {
+	box-shadow: 0 5px 25px rgba(1, 1, 1, 0.1);
+	padding: 30px;
+}
+
+.skill-item-icon {
+	margin-bottom: 20px;
+}
+
+.skill-item-title {
+	font-size: 20px;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+
+/* Resume Styles */
+#resume {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 30px;
+}
+
+#resume .section-title {
+	margin-bottom: 50px;
+}
+
+.education-experience-container {
+	display: flex;
+}
+
+.education-container-title,
+.experience-container-title {
+	font-size: 30px;
+	font-weight: 700;
+	margin-bottom: 30px;
+}
+
+.education-details,
+.experience-details {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
+.education-card-degree,
+.experience-card-position {
+	font-size: 25px;
+	font-weight: 700;
+	margin-bottom: 5px;
+}
+
+.education-card-institution,
+.experience-card-company {
+	font-size: 20px;
+	font-weight: 600;
+	color: #757575;
+	margin-bottom: 10px;
+}
+
+hr {
+	margin-right: 15px;
+}
+
+/* Footer Styles */
+footer {
+	background-color: #fff8f3;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.footer-container {
+	max-width: 1140px;
+	margin: 150px 0;
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer-right,
+.footer-left {
+	width: 50%;
+}
+.footer-left-title,
+.footer-right-title {
+	font-size: 35px;
+	font-weight: 800;
+	margin-bottom: 20px;
+}
+
+.footer-icons {
+	display: flex;
+	gap: 20px;
+}
+
+.footer-form {
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+}
+
+.footer-form input,
+textarea {
+	padding: 18px;
+	background-color: white;
+	border: none;
+	font-size: 20px;
+}
+
+.footer-left-description {
+	margin-bottom: 30px;
+}
+
+footer button {
+	width: 200px;
 }
