--- a/styles/style.css
+++ b/styles/style.css
@@ -255,6 +255,7 @@ hr {
 footer {
 	background-color: #fff8f3;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
@@ -300,5 +301,5 @@ textarea {
 }
 
 footer button {
-	width: 200px;
+	width: 130px;
 }
